[project]
name = "llm-codesearch"
version = "0.1.0"
description = "LLM extension for repository code search"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["click"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."llm.plugins"]
codesearch = "llm_codesearch:register"
